--- a/account/account.query/settings.gradle
+++ b/account/account.query/settings.gradle
@@ -1,1 +1,5 @@
 rootProject.name = 'account.query'
+
+include 'account.common'
+include ':cqrs.core'
+project(':cqrs.core').projectDir = file('../cqrs/cqrs.core')
