--- a/account/settings.gradle
+++ b/account/settings.gradle
@@ -1,5 +1,5 @@
 rootProject.name = 'account'
 
-include("account.command", "account.query", "account.common")
-include (":cqrs.core")
-project(":cqrs.core").projectDir = file("../cqrs/cqrs.core")
+include 'account.command', 'account.query', 'account.common'
+include ':cqrs.core'
+project(':cqrs.core').projectDir = file('../cqrs/cqrs.core')
