run project with bootRun

--- a/account/account.command/settings.gradle
+++ b/account/account.command/settings.gradle
@@ -1,3 +1,8 @@
 rootProject.name = 'account.command'
 
-include("account.common")
+include ':account.common'
+project(':account.common').projectDir = file('../account.common')
+
+include ':cqrs.core'
+project(':cqrs.core').projectDir = file('../../cqrs/cqrs.core')
+
