--- a/account/account.command/build.gradle
+++ b/account/account.command/build.gradle
@@ -1,8 +1,13 @@
 plugins {
+	id 'application'
 	id 'java'
 	id 'org.springframework.boot' version '3.2.4'
 	id 'io.spring.dependency-management' version '1.1.4'
 }
+
+apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group = 'com.hoangtn.techbank'
 version = '1.0.0'
@@ -25,8 +30,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
-	implementation project(":account.common")
-	implementation project(":cqrs.core")
+	implementation project(':account.common')
+	implementation project(':cqrs.core')
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
