--- a/account/account.common/build.gradle
+++ b/account/account.common/build.gradle
@@ -21,15 +21,20 @@ repositories {
 	mavenCentral()
 }
 
+bootJar {
+	enabled = false
+}
+
+jar {
+	enabled = true
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation project(":cqrs.core")
+	implementation project(':cqrs.core')
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
