--- a/account/account.query/settings.gradle
+++ b/account/account.query/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'account.query'
 
-include 'account.common'
+include ':account.common'
+project(':account.common').projectDir = file('../account.common')
+
 include ':cqrs.core'
-project(':cqrs.core').projectDir = file('../cqrs/cqrs.core')
+project(':cqrs.core').projectDir = file('../../cqrs/cqrs.core')
