[Fix] producer send message

--- a/account/account.query/src/main/resources/application.yml
+++ b/account/account.query/src/main/resources/application.yml
@@ -21,9 +21,9 @@ spring:
       group-id: bankAccountConsumer
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.support.serialization.JsonDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring:
           json:
-            trust:
-              package: '*'
+            trusted:
+              packages: '*'
